<resources>
    <string name="Sold_out">已售罄</string>
    <string name="account_leave">账户余额</string>
    <string name="account_leavle">积分兑换</string>
    <string name="add_code">添加优惠</string>
    <string name="add_invoice">添加发票</string>
    <string name="affirmdish_donation">点餐满</string>
    <string name="affirmdish_donationinfo">满%1$s元即享赠品优惠</string>
    <string name="affirmdish_notdonation">点餐满%1$.2f元即可享%2$s</string>
    <string name="after_pm_order_dialog_message">您好，因时间已晚，餐厅今日已停止接收外卖订单，欢迎您明天前来订餐！</string>
    <string name="afteram_beforepm_order_dialog_message">抱歉，餐厅午餐下单截止时间%1$s，目前已经停止接受午餐订单。您可以拨打%2$s，到家客服人员会协助你下单</string>
    <string name="afterpm_order_dialog_message">很抱歉，本餐厅今日晚间最后下单时间为%1$s，目前已经停止接单，欢迎您明天前来订餐</string>
    <string name="allow_submit_order_dialog_message">抱歉，由于下单操作时间过长，原定用餐时间可能无法保证，请重新确认用餐时间</string>
    <string name="alter_order">订单咨询或修改可拨打客服电话</string>
    <string name="alter_order_messages">请填写联系人信息</string>
    <string name="am">午餐</string>
    <string name="am_allow_order_dialog_message">因午间休息，%1$s以后%2$s仅接受晚餐订单；如果您希望尽快用餐，请拨打%3$s，到家客服将为您下单，谢谢！</string>
    <string name="app_name">到家美食会</string>
    <string name="area_close">该区域停止营业</string>
    <string name="bad_review_reason">请输入您对送餐服务不满的原因</string>
    <string name="button_review_dital">订单详情</string>
    <string name="cancel">取消</string>
    <string name="cancel_card_dialog_message">您要取消办理贵宾卡吗?</string>
    <string name="cart_address_hint">如果需要,请在此完善送餐地址</string>
    <string name="cart_address_title">为保证送餐速度，建议您将门牌号码填写完整</string>
    <string name="cart_areaid_messages">您选择的地址不在餐厅的配送范围</string>
    <string name="cart_sub_dialog_no">直接下单</string>
    <string name="cart_sub_dialog_ok">补全地址</string>
    <string name="cart_sub_messages">为保证送餐速度，请您补全门牌号等详细信息</string>
    <string name="change_psw_new_agin_psw">确认新密码：</string>
    <string name="change_psw_new_agin_psw_hit">请再次输入密码</string>
    <string name="change_psw_new_psw">"新    密    码："</string>
    <string name="change_psw_new_psw_hit">至少6位字符、数字或符号</string>
    <string name="change_psw_old_psw">"原    密    码："</string>
    <string name="change_psw_old_psw_hit">请输入密码</string>
    <string name="change_psw_sub">提交</string>
    <string name="check_version">检查更新</string>
    <string name="choose_dishes">点菜</string>
    <string name="choose_photo">选择图片来源</string>
    <string name="city_close">该城市停止营业</string>
    <string name="clear_search_history">清除搜索历史</string>
    <string name="code_donation">[赠品]</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="confirm">确定</string>
    <string name="daojia_error_account_disable">支付账户禁用</string>
    <string name="daojia_error_account_not_exist">支付账户不存在</string>
    <string name="daojia_error_dish_nohave">抱歉，您搜索的菜品当前已下架。</string>
    <string name="daojia_error_not_inside">您所在的地点不在配送范围内</string>
    <string name="daojia_error_not_sufficient_funds">账户余额不足！</string>
    <string name="daojia_error_psw_error">支付密码错误</string>
    <string name="daojia_error_restaurant_forbidden">抱歉，该餐厅因运营调整暂时无法点餐，建议您选择其他餐厅。</string>
    <string name="daojia_error_server_error">服务器内部错误！</string>
    <string name="daojiacopyright">Copyright©2010-2015 daojia.com.cn</string>
    <string name="day_allow_order_dialog_message">您好，本餐厅今天暂停接单，如有紧急需求请拨%1$s,咨询客服人员，谢谢</string>
    <string name="delivery_cost">配送费用</string>
    <string name="delivery_service">送餐服务：</string>
    <string name="dishes_quality">菜品质量：</string>
    <string name="dont_need_coupon">查看订单</string>
    <string name="failure">加载失败...</string>
    <string name="food_price">¥%1$.2f</string>
    <string name="food_restaurant">商家</string>
    <string name="format_about_complaintphone">投诉电话：</string>
    <string name="format_about_servicephone">%1$s%2$s客服：%3$s</string>
    <string name="format_about_version">版本:%1$s　%2$s</string>
    <string name="format_address_area_prompt">您的送餐地址位于%1$s区域，共有%2$d家餐厅可选</string>
    <string name="format_address_not_inside">您的用餐地址在%1$s区域内,将为您跳转到该区域继续点餐</string>
    <string name="format_address_outside_service_range">很抱歉，您所输入的地址位于我们服务区域外，目前不提供网络订餐，你可以拨打%1$s，直接与客服人员沟通</string>
    <string name="format_address_success_goto_order">送餐地址输入成功，请继续点餐</string>
    <string name="format_address_unknown">很抱歉，您所输入的地址系统无法识别。您可以拨打%1$s，直接与客服人员沟通。</string>
    <string name="format_area_description">%1$d家餐厅</string>
    <string name="format_area_title">到家%1$s</string>
    <string name="format_card_apply_successfully">%1$s号贵宾卡使用成功，请您在收餐时出示贵宾卡，送餐员验卡后会免收您的送餐费</string>
    <string name="format_code_cost">"代码应用成功：
［餐费优惠］%s"</string>
    <string name="format_code_deliverycost">"代码应用成功：
［送餐费优惠］%s"</string>
    <string name="format_code_invalid">代码应用失败，%s</string>
    <string name="format_consumption_limit">%1$.2f元起送；</string>
    <string name="format_dishes_search_result">在%1$s找到%2$d道关于“%3$s”的菜品</string>
    <string name="format_food_cart_label">选好了</string>
    <string name="format_food_cart_label_short">还差%1$s元起订</string>
    <string name="format_food_price">%1$.2f元／%2$s</string>
    <string name="format_food_search_result">有%1$d个关于“%2$s”的菜品</string>
    <string name="format_food_total">(%1$s)</string>
    <string name="format_foodsearch_empty_search">%1$s没有关于“%2$s”的菜品</string>
    <string name="format_input_am_servicetime">"午餐外卖最早送达时间为%1$d:%2$02d
"</string>
    <string name="format_input_pm_servicetime">晚餐外卖最早送达时间为%1$d:%2$02d</string>
    <string name="format_login_title">到家%1$s</string>
    <string name="format_packaging_policy_fixed">餐厅每单收%1$.2f元包装费；</string>
    <string name="format_packaging_policy_none">餐厅不收包装费</string>
    <string name="format_packaging_policy_rate">餐厅每%1$.2f元订餐金额收取1元包装费；</string>
    <string name="format_packaging_policy_real">餐厅按餐盒用量收包装费</string>
    <string name="format_price">¥%1$.2f</string>
    <string name="format_restaurant_dishes_result">%1$d家提供“%2$s”的餐厅</string>
    <string name="format_restaurant_price_result">%1$d家餐厅 | %2$s元起</string>
    <string name="format_restaurant_search_result">在%1$s找到%2$d家关于“%3$s”的餐厅</string>
    <string name="format_restaurantsearch_notfound">%1$s没有关于“%2$s”的餐厅</string>
    <string name="format_review_am2pm_boundary">抱歉，午餐下单截止时间为%1$d:%2$02d，目前已经停止接受午餐订单。您可以拨打%3$s，到家客服人员会协助你下单</string>
    <string name="format_review_bwteen_am2pm">因较多餐厅午间休息，14:00以后网站仅接受晚餐订单，如您希望尽快用餐，请拨打%1$s到家客服将为您下单，谢谢！</string>
    <string name="format_review_closeshop">您好，很抱歉我们今天已经停止接单了，如有紧急需求请拨%1$s，咨询客服人员，谢谢！</string>
    <string name="format_review_consumption_limit">订单未达到%1$s%2$.2f起送金额，请继续选订，谢谢！</string>
    <string name="format_review_notsupport">该餐厅尚不支持网络订餐，请拨打%1$s，客服人员会协助您下单</string>
    <string name="format_review_relation">您还没有订购%1$s</string>
    <string name="format_review_service_end">抱歉，最后下单时间为%1$d:%2$2d，目前已经停止接单。您可以拨打%3$s，到家客服人员会协助您下单。</string>
    <string name="format_search_dishes_result">在%1$s查找关于“%2$s”的菜品</string>
    <string name="format_welcome">注册成功，欢迎您，%1$s%2$s</string>
    <string name="ga_trackingId">UA-51404666-2</string>
    <string name="giftcardrecharge_goto_home">查看余额</string>
    <string name="giftcardrecharge_numempty">请输入卡号</string>
    <string name="giftcardrecharge_passwordempty">请输入礼品卡密码</string>
    <string name="giftcardrecharge_stayfor_recharge">继续充值</string>
    <string name="home_about">关于到家</string>
    <string name="home_address">我的送餐地址</string>
    <string name="home_address_empty">您还没有添加过送餐地址</string>
    <string name="home_address_title">送餐地址</string>
    <string name="home_card">我的贵宾卡</string>
    <string name="home_check_version_notify">正在检查新版本 …</string>
    <string name="home_chenjin">沉浸模式</string>
    <string name="home_city">切换城市</string>
    <string name="home_code">我的优惠</string>
    <string name="home_complaint">意见反馈</string>
    <string name="home_history">历史订单</string>
    <string name="home_history_">最近点过</string>
    <string name="home_history_empty">还没有最近点过的餐厅</string>
    <string name="home_setting">修改密码</string>
    <string name="home_user_logined">用户%1$s已登录</string>
    <string name="home_user_not_logined">用户未登录</string>
    <string name="init_city_error">初始化城市数据失败,请重试!</string>
    <string name="invite_friend">邀请好友得优惠券</string>
    <string name="is_logou_account">是否退出当前账号?</string>
    <string name="judge_delivery">送餐服务评价：</string>
    <string name="judge_delivery_please">请评价送餐服务</string>
    <string name="judge_detail_length">评价内容不能少于5个字</string>
    <string name="judge_dishes">菜品质量评价：</string>
    <string name="judge_dishes_please">请评价菜品质量</string>
    <string name="judge_order">订单评价</string>
    <string name="judge_please">对这次消费满意吗？您的评价将成为其他顾客的重要参考。</string>
    <string name="judge_star_description">请打分</string>
    <string name="judge_submit">提交</string>
    <string name="judge_success">评价成功</string>
    <string name="kindly_reminder">温馨提示</string>
    <string name="label_about_introduce">　　“到家美食会”成立于２０１０年，专注于为城市家庭提供特色餐厅外卖服务。</string>
    <string name="label_about_site">www.daojia.com.cn</string>
    <string name="label_about_title">关于到家</string>
    <string name="label_add_address">+ 输入送餐地址</string>
    <string name="label_add_address_start">+ 输入送餐地址,开始点餐</string>
    <string name="label_address">"地    址："</string>
    <string name="label_address_new_address">新地址</string>
    <string name="label_address_title">完善送餐地址</string>
    <string name="label_address_title_new">到家美食会</string>
    <string name="label_address_used_address">曾用地址</string>
    <string name="label_address_where_eat">今天在哪吃？</string>
    <string name="label_address_where_goto_eat">请输入送餐地址，开始点餐</string>
    <string name="label_affirm">确认</string>
    <string name="label_announcement_title">区域公告</string>
    <string name="label_back">返回</string>
    <string name="label_call">拨打客服电话</string>
    <string name="label_cancel">取消</string>
    <string name="label_cart_appraise">评价</string>
    <string name="label_cart_appraise_yet">已评价</string>
    <string name="label_cart_completed">已完成</string>
    <string name="label_cart_mtitle">订单</string>
    <string name="label_cart_ongoing">进行中</string>
    <string name="label_cart_refresh">刷新</string>
    <string name="label_cart_remark">"备       注："</string>
    <string name="label_cart_shipping_address">送餐地址：</string>
    <string name="label_cart_shipping_time">用餐时间：</string>
    <string name="label_cart_status">订单状态：</string>
    <string name="label_cart_status_null">"                    "</string>
    <string name="label_cart_title">今日订单</string>
    <string name="label_link">复制链接</string>
    <string name="label_login_forget_password">找回密码</string>
    <string name="label_login_logon">登录</string>
    <string name="label_login_quickly_register">快速注册</string>
    <string name="label_ok">确定</string>
    <string name="label_payment_daojiabalancepayment">余额付款：</string>
    <string name="label_payment_enterpasswordforpayment">请输入支付密码</string>
    <string name="label_payment_mealpayment">餐到付款：</string>
    <string name="label_payment_meals">餐费合计：</string>
    <string name="label_payment_pay">支付</string>
    <string name="label_payment_paymentpass">支付密码</string>
    <string name="label_payment_sendverificationcode">发送验证码</string>
    <string name="label_payment_verificationcode">验证码</string>
    <string name="label_sms">短信</string>
    <string name="label_wechat">微信</string>
    <string name="label_wechat_circle">朋友圈</string>
    <string name="prompt_account">手机号</string>
    <string name="prompt_password">请输入您的密码</string>
    <string name="rule_1">老用户可通过专属链接邀请好友，新用户领取优惠券并注册之后，在手机客户端首次下单满50元，可直减20元。</string>
    <string name="rule_2">被邀请的新用户完成首单后次日，老用户也将获得满50元减20元的优惠券。</string>
    <string name="rule_3">该优惠券自领取/发放之日起15天内有效。</string>
    <string name="rule_4">本活动仅限定同城好友间邀请，且不与其他首单优惠同享。</string>
    <string name="rule_5">到家美食会对此次活动保留最终解释权。</string>
    <string name="rule_illustrate">规则说明</string>
    <string name="select_camer">拍照上传</string>
    <string name="select_picture">从相册中选取</string>
    <string name="share_title">分享您的专属链接至</string>
    <string name="title_cancel">取消</string>
    <string name="word_limit">不超过10个字</string>
</resources>