<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/balancepayment_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="@color/white" android:gravity="center_horizontal" android:id="@id/dialog_title" android:background="@drawable/balancepayment_title_bg" android:paddingLeft="5.0dip" android:paddingTop="15.0dip" android:paddingRight="5.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/bad_review_reason" />
    <View android:background="@drawable/line" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <EditText android:textSize="15.0sp" android:textColor="#ffbfbfbf" android:layout_gravity="center_vertical" android:id="@id/ed_badreview" android:background="@drawable/paymentedit_bg" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_margin="10.0dip" android:layout_marginTop="10.0dip" android:hint="@string/word_limit" android:maxLength="10" android:inputType="textEmailAddress">
        <requestFocus />
    </EditText>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/btn_cancel" android:background="@drawable/login_button_selector" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/title_cancel" android:layout_weight="1.0" />
        <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/btn_ok" android:background="@drawable/login_button_selector" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/label_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>